# event-router

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  event.json  pyproject.toml
events/fail/: payment_failed_fraud_suspected.json  payment_failed_insufficient_funds.json
events/success/: link_bank_success.json  payment_initiated.json  signup_completed.json
src/: app_types.py  dependencies.py  main.py  schemas.py
src/clients/: asyncpg_client.py  email_notifier.py  pg_store.py  sms_notifier.py
src/configs/: emails_templates.yaml  rules.yaml
src/endpoints/: audit.py  events.py
src/middleware/: context_logger_middleware.py  timeout.py  tracer.py
src/services/: message_router_service.py  rule_engine.py
src/settings/: build_logger.py  configuration_singleton.py
src/utils/: async_ttl_cache.py
tests/: conftest.py  test_api_endpoints.py  test_asyncpg_client.py  test_message_router_functional.py
